# Unified-App-Packager

./: CMakeLists.txt  LICENSE.md  README.md
inc/: argparse.h  info.h
src/: main.cpp
